[project]
name = "b2ac"
version = "0.2.1"
description = "Python and C implementations of an ellipse fitting algorithm in double and fixed point precision."
authors = [{ name = "Henrik Blidh", email = "henrik.blidh@nedomkull.com" }]
dependencies = ["numpy>=1.26"]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "hatch-cython @ git+https://github.com/vhdirk/hatch-cython/@handwritten-c-extensions",
    "pytest>=8.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rfEX -p pytester --strict-markers --doctest-modules"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["b2ac"]

[tool.hatch.build.targets.sdist]
include = ["b2ac"]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = [
    "Cython",
    "setuptools",
    "numpy",
    "llvmlite",
    "hatch",
    "hatch-cython @ git+https://github.com/vhdirk/hatch-cython/@handwritten-c-extensions",
    "numpy>=1.26",
]

[tool.hatch.build.targets.wheel.hooks.cython.options]
src = "b2ac/ext"

includes = [ 'b2ac/ext/src' ]

compile_py = false
include_numpy = true
include_pyarrow = false
compiled_sdist = false

compile_args = [
    # single string
    "-v",
    # by platform
    { platforms = [
        "linux",
        "darwin",
    ], arg = "-Wcpp" },
    # by platform & arch
    { platforms = "darwin", arch = "x86_64", arg = "-arch x86_64" },
    { platforms = [
        "darwin",
    ], arch = "arm64", arg = "-arch arm64" },
    # with pep508 markers
    { platforms = [
        "darwin",
    ], arch = "x86_64", arg = "-I/usr/local/opt/llvm/include", depends_path = true, marker = "python_version <= '3.10'" },
]

directives = { boundscheck = false, nonecheck = false, language_level = 3, binding = true }

[tool.hatch.build.targets.wheel.hooks.cython.options.files]
aliases = { "b2ac.ext.src.*" = "b2ac.ext.ellipse_fitter" }
exclude = [
    "*src_2/*"
]

